--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,6 +3,9 @@ on:
   pull_request:
     branches:
       - develop
+strategy:
+  matrix: # Serve para rodar em várias versões do go ou OS
+    go: ['1.15', '1.22']
 jobs:
   check-application:
     runs-on: ubuntu-latest
@@ -10,6 +13,6 @@ jobs:
       - uses: actions/checkout@v2 # baixa os arquivos no ubuntu
       - uses: actions/setup-go@v2 # instala o go para executar os comandos
         with:
-          go-version: '1.22' # versão do go
+          go-version: ${{ matrix.go }} # versão do go
       - run: go test
       - run: go run calculadora.go
